fix(navbar): fix nav-user vertical alignment

--- a/src/app/components/knx-navigation/navbar.component.scss
+++ b/src/app/components/knx-navigation/navbar.component.scss
@@ -33,11 +33,15 @@ $knx-navbar-font: $font-size-base;
   font-size: $knx-navbar-font;
 }
 
+.knx-navbar [class*='knx-icon-']:before {
+  line-height: 1em;
+}
+
 .navbar > .container .navbar-brand,
 .navbar > .container-fluid .navbar-brand,
 .knx-navbar.navbar-toggleable-md .navbar-nav .nav-item .navbar-brand {
   margin-left: 0;
-  padding-top: 0.8em;
+  padding-top: 0.6em;
 }
 
 .knx-navbar .navbar-nav .nav-item {
